# 60-340-Genetic-Algorithm-Project

./: CMakeLists.txt  LICENSE.md  README.md  ga  ga.cxx  main.cxx  types.cxx
